2001-11-14  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_interfaces_parse_table): If
	interface has no NAME variable, use the IFACE: that's the new
	Red Hat 7.2 way.

	* users-conf.in: Added redhat-7.2 as a supported platform.

2001-11-13  Arturo Espinosa Aldama  <arturo@ximian.com>

	* platform.pl.in: Added redhat-7.2 platform info.

	* service.pl.in (xst_service_sysv_get_runlevels): Added redhat-7.2.
	(xst_service_sysv_get_paths): same.

Mon Nov  5 22:03:17 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_interface_replace_table):
	replace tables for rh72.
	(xst_network_get_replace_table): same.

	* replace.pl.in (xst_replace_run_entry): Converse of
	xst_parse_run_entry.

	* xml.pl.in (xst_xml_unquote): When unquoting, unquote any
	&#num; entities.

2001-11-06  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_interfaces_expand_iface): bug fix.
	(xst_network_interfaces_get): Pass the interface.

	* util.pl.in (xst_arr_merge): Merges scr array into dest array.

	* network.pl.in (xst_network_sysconfig_rh72_ifaces_get_existing):
	rh72 method to get all existing interfaces. Calls a redhat prog
	to migrate from network-scripts to networking.
	(xst_network_sysconfig_dir_ifaces_get_existing): Abstraction
	of previous network-scripts specific code.
	(xst_network_sysconfig_rh62_ifaces_get_existing): Use new
	abstraction.

	* network-conf.in: Added redhat-7.2 as a supported platform.

	* network.pl.in (xst_network_interfaces_expand_iface): The
	#ifaces# expansion hack, but for array also.
	(xst_network_interfaces_get): Use this new function.

2001-11-05  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in (xst_network_get_parse_table): Created
	parse table for Red Hat 7.2.

	* parse.pl.in (xst_parse_run_entry): This one is powerful.
	["user", \&xst_parse_foo, [0, 1], [2, 3] ] will parse
	using the combinatory of [0, 1]x[2, 3] until a result