@@ -62,8 +62,14 @@ BEGIN {
 
 $name = "shares";
 $version = "___version___";
-@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
-              "redhat-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0", "turbolinux-7.0");
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
+              "redhat-7.2",
+
+              "mandrake-7.2",
+
+              "debian-2.2", "debian-woody",
+
+              "suse-7.0", "turbolinux-7.0");
 
 #              "freebsd-4", "freebsd-5");
 
@@ -81,6 +87,7 @@ $platmap =
   "redhat-6.2"   => "redhat-6.2",
   "redhat-7.0"   => "redhat-7.0",
   "redhat-7.1"   => "redhat-7.0",
+  "redhat-7.2"   => "redhat-7.0",
   "debian-2.2"   => "redhat-7.0",
   "debian-woody" => "redhat-7.0",
   "mandrake-7.2" => "redhat-7.0",
