@@ -60,7 +60,13 @@ BEGIN {
 $name = "time";
 $version = "___version___";
 @platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0", "redhat-7.1",
-              "mandrake-7.1", "mandrake-7.2", "debian-2.2", "debian-woody", "suse-7.0", "turbolinux-7.0");
+              "redhat-7.2",
+              
+              "mandrake-7.1", "mandrake-7.2",
+              
+              "debian-2.2", "debian-woody",
+
+              "suse-7.0", "turbolinux-7.0");
 
 $description =<<"end_of_description;";
        Configures your system clock, timezone and time server list.
@@ -496,6 +502,7 @@ sub conf_get_replace_table
    
    "redhat-7.0"   => "redhat-7.0",
    "redhat-7.1"   => "redhat-7.0",
+   "redhat-7.2"   => "redhat-7.0",
 
    "mandrake-7.1" => "redhat-7.0",
    "mandrake-7.2" => "redhat-7.0",
